<resources>
    <string name="app_name">Sock Translation Labs</string>

    <!-- Menu stuff -->
    <string name="menu_header_title">Sock Translation Labs</string>
    <string name="menu_audio">Audio</string>
    <string name="menu_video">Video</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_about">About</string>

    <!-- Audio fragment stuff -->
    <string name="translate_audio_title">Welcome to Sock translation!</string>
    <string name="control_audio_title">Here is my control audio fragment.</string>
    <string name="control_language_audio">I am a control for audio language.</string>

    <!-- Language Control stuff -->
    <string name="switch_content_description">Switch languages</string>

    <!-- Language choices -->
    <string-array name="language_choices">
        <item>Auto-detect</item>
        <item>English</item>
        <item>Spanish</item>
        <item>German</item>
        <item>Arabic</item>
        <item>French</item>
        <item>Chinese</item>
        <item>Portuguese</item>
    </string-array>

    <!-- Video fragment stuff -->
    <string name="camera_error">Camera error</string>
    <string name="request_permission">Sock Translation would like to access the camera.</string>
    <string name="subtitle_text">"Hello darkness my old friend, I've come to speak with you again."</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
