<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:id="@+id/group1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_audio"
            android:icon="@drawable/ic_mic"
            android:title="@string/menu_audio" />
        <item
            android:id="@+id/nav_video"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_video" />
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_history" />
    </group>
    <group android:id="@+id/group2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />
    </group>
</menu>